--- a/c-style/Makefile
+++ b/c-style/Makefile
@@ -7,3 +7,8 @@ clean:
 
 macro:
 	gcc -g -E main.c list.o node.o
+
+o:
+	rm a.exe list.o node.o 2>/dev/null
+	gcc -g -c list.c node.c
+	gcc -g main.c list.o node.o
