simplify map.h content

--- a/c-style/Makefile
+++ b/c-style/Makefile
@@ -6,8 +6,7 @@ clean:
 	-rm a.exe list.o node.o 2>/dev/null
 
 macro:
-	gcc -g -E main.c list.o node.o
-
+	gcc -g -E main.c
 o:
 	rm a.exe list.o node.o 2>/dev/null
 	gcc -g -c list.c node.c
