--- a/c-style/example/Makefile
+++ b/c-style/example/Makefile
@@ -3,6 +3,7 @@ all:
 	gcc -g -o declare declare.c list.o node.o
 	gcc -g -o hof hof.c list.o node.o
 	gcc -g -o main main.c list.o node.o
+	#gcc -g -o main append.c list.o node.o
 clean:
 	rm -f *.exe list.o node.o 2>/dev/null
 macro:
@@ -13,3 +14,4 @@ o:
 	gcc -g -o declare declare.c list.o node.o
 	gcc -g -o hof hof.c list.o node.o
 	gcc -g -o main main.c list.o node.o
+	#gcc -g -o main append.c list.o node.o
