--- a/c-style/example/Makefile
+++ b/c-style/example/Makefile
@@ -4,6 +4,7 @@ all:
 	gcc -g -o hof hof.c list.o node.o
 	gcc -g -o main main.c list.o node.o
 	gcc -g -o appd append.c list.o node.o
+	gcc -g -o del delete.c list.o node.o
 clean:
 	rm -f *.exe list.o node.o 2>/dev/null
 macro:
@@ -15,3 +16,4 @@ o:
 	gcc -g -o hof hof.c list.o node.o
 	gcc -g -o main main.c list.o node.o
 	gcc -g -o appd append.c list.o node.o
+	gcc -g -o del delete.c list.o node.o
