--- a/oo-c/example/Makefile
+++ b/oo-c/example/Makefile
@@ -3,8 +3,7 @@ all:
 	gcc -g -o declare declare.c list.o node.o
 	gcc -g -o hof hof.c list.o node.o
 	gcc -g -o main main.c list.o node.o
-	gcc -g -o appd append.c list.o node.o
-	gcc -g -o del delete.c list.o node.o
+	gcc -g -o append append.c list.o node.o
 clean:
 	rm -f *.exe list.o node.o 2>/dev/null
 macro:
@@ -15,5 +14,4 @@ o:
 	gcc -g -o declare declare.c list.o node.o
 	gcc -g -o hof hof.c list.o node.o
 	gcc -g -o main main.c list.o node.o
-	gcc -g -o appd append.c list.o node.o
-	gcc -g -o del delete.c list.o node.o
+	gcc -g -o append append.c list.o node.o
